update sample
